--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>2.9.3</version>
         </dependency>
         <dependency>
+            <groupId>org.lwjgl.lwjgl</groupId>
+            <artifactId>lwjgl_util</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.slick2d</groupId>
             <artifactId>slick2d-core</artifactId>
             <version>${slick.version}</version>
